# ecommerce-django-rest

./: .env.example  README.md  manage.py  pyproject copy.toml  pyproject.toml
src/: asgi.py  wsgi.py
src/common/: env.py
src/settings/: base.py  dev.py  production.py
