[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["antoniocortez1497@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.13"
djangorestframework = "^3.14.0"
django-environ = "^0.11.2"
django-cors-headers = "^4.3.1"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
django-safedelete = "^1.3.3"
djangorestframework-simplejwt = "^5.3.1"
djongo = "^1.3.6"


[tool.poetry.group.dev.dependencies]
pytest-drf = "^1.1.3"
pytest-django = "^4.8.0"
faker = "^23.1.0"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
